# industrial_training

exercises/Perception-Driven_Manipulation/template_ws/src/collision_avoidance_pick_and_place/: CMakeLists.txt
exercises/Perception-Driven_Manipulation/template_ws/src/collision_avoidance_pick_and_place/src/services/: target_recognition_service.cpp
gh_pages/_source/session4/: Introduction-to-Perception.md
gh_pages/_source/session5/: Building-a-Perception-Pipeline.rst  Introduction-to-STOMP.md  OpenCV-in-Python.md
